--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 		<p>Yours Truly, Famous Inc.</p>
 	</header>
 	<section class="slide" id="cover">
-		<h2>Shower Presentation Engine</h2>
-		<p>Brought to you by <a href="http://pepelsbey.net">Vadim Makeev</a></p>
+		<h2>Введение в GIT</h2>
+		<p><a href="https://github.com/MammaSonnim">Яна Крикливая</a></p>
 		<img src="pictures/cover.jpg" alt="" class="cover">
 		<!--
 			To apply styles to the certain slides
@@ -22,7 +22,7 @@
 			-->
 		<style>
 			#cover h2 {
-				margin:30px 0 0;
+				margin:150px 0 0;
 				color:#FFF;
 				text-align:center;
 				font-size:70px;
@@ -38,6 +38,11 @@
 					color:#FFF;
 					}
 		</style>
+	</section>
+	<section class="slide">
+		<h2>Что это такое?</h2>
+		<p><strong>Git</strong> (произн. «гит») — распределённая система контроля версий <i>(СКВ)</i>. Проект был создан <b>Линусом Торвальдсом</b> для управления разработкой ядра Linux, первая версия выпущена 7 апреля 2005 года. На сегодняшний день его поддерживает Джунио Хамано.</p>
+		<p><strong>СКВ</strong> (или англ. Version Control System, VCS) — программное обеспечение для облегчения работы с изменяющейся информацией. Система управления версиями позволяет хранить несколько версий одного и того же документа, при необходимости возвращаться к более ранним версиям, определять, кто и когда сделал то или иное изменение, и многое другое.</p>
 	</section>
 	<section class="slide">
 		<h2>Shower key features</h2>
