--- a/index.html
+++ b/index.html
@@ -41,9 +41,29 @@
 	</section>
 	<section class="slide">
 		<h2>Что это такое?</h2>
-		<p><strong>Git</strong> (произн. «гит») — распределённая система контроля версий <i>(СКВ)</i>. Проект был создан <b>Линусом Торвальдсом</b> для управления разработкой ядра Linux, первая версия выпущена 7 апреля 2005 года. На сегодняшний день его поддерживает Джунио Хамано.</p>
-		<p><strong>СКВ</strong> (или англ. Version Control System, VCS) — программное обеспечение для облегчения работы с изменяющейся информацией. Система управления версиями позволяет хранить несколько версий одного и того же документа, при необходимости возвращаться к более ранним версиям, определять, кто и когда сделал то или иное изменение, и многое другое.</p>
+		<p><strong>Git</strong> — распределённая система контроля версий <i>(СКВ)</i>. Проект был создан Линусом Торвальдсом для управления разработкой ядра Linux, первая версия выпущена 7 апреля 2005 года. На сегодняшний день его поддерживает Джунио Хамано.</p>
 	</section>
+	<section class="slide">
+		<h2>Что это такое?</h2>
+		<p><strong>СКВ</strong> — ПО для облегчения работы с изменяющейся информацией. СКВ позволяет хранить несколько версий одного и того же документа, при необходимости возвращаться к более ранним версиям, определять, кто и когда сделал то или иное изменение, и многое другое.</p>
+	</section>
+	<section class="slide">
+		<h2>Особенности Git</h2>
+		<ol>
+			<li>Слепки вместо патчей</li>
+			<li class="next">Почти все операции локальные</li>
+			<li class="next">Git следит за целостностью файлов</li>
+			<li class="next">Чаще всего данные в Git только добавляются</li>
+			<li class="next">3 состояния файлов:
+				<ul style="font-size: 0.7em;">
+					<li>зафиксированные (commited)</li>
+					<li>измененные (modified)</li>
+					<li>подготовленные (staged)</li>
+				</ul>
+			</li>
+		</ol>
+	</section>
+
 	<section class="slide">
 		<h2>Shower key features</h2>
 		<ol>
