--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
 			</li>
 		</ol>
 	</section>
+	<section class="slide">
+		<h2>Стандартный рабочий процесс</h2>
+		<ol>
+			<li>Вы вносите изменения в файлы в своём рабочем каталоге.</li>
+			<li class="next">Подготавливаете файлы, добавляя их слепки в область подготовленных файлов.</li>
+			<li class="next">Делаете коммит, который берёт подготовленные файлы из индекса и помещает их в каталог Git'а на постоянное хранение.</li>
+		</ol>
+	</section>
 
 	<section class="slide">
 		<h2>Shower key features</h2>
