--- a/index.html
+++ b/index.html
@@ -40,20 +40,22 @@
 		</style>
 	</section>
 	<section class="slide">
-		<h2>Что это такое?</h2>
+		<h2>Что такое Git?</h2>
 		<p><strong>Git</strong> — распределённая система контроля версий <i>(СКВ)</i>. Проект был создан Линусом Торвальдсом для управления разработкой ядра Linux, первая версия выпущена 7 апреля 2005 года. На сегодняшний день его поддерживает Джунио Хамано.</p>
+		<p><a href="https://ru.wikipedia.org/wiki/Git">Wikipedia</a></p>
 	</section>
 	<section class="slide">
-		<h2>Что это такое?</h2>
+		<h2>Что такое система контроля версий?</h2>
 		<p><strong>СКВ</strong> — ПО для облегчения работы с изменяющейся информацией. СКВ позволяет хранить несколько версий одного и того же документа, при необходимости возвращаться к более ранним версиям, определять, кто и когда сделал то или иное изменение, и многое другое.</p>
+		<p><a href="https://ru.wikipedia.org/wiki/Система_управления_версиями">Wikipedia</a></p>
 	</section>
 	<section class="slide">
 		<h2>Особенности Git</h2>
 		<ol>
-			<li>Слепки вместо патчей</li>
+			<li>Хранимые данные — набор слепков</li>
 			<li class="next">Почти все операции локальные</li>
 			<li class="next">Git следит за целостностью файлов</li>
-			<li class="next">Чаще всего данные в Git только добавляются</li>
+			<li class="next">Сложно что-то поломать</li>
 			<li class="next">3 состояния файлов:
 				<ul style="font-size: 0.7em;">
 					<li>зафиксированные (commited)</li>
