command line iss01

--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
 			</li>
 		</ol>
 	</section>
+	<section class="slide">
+		<h2>Что нужно для работы:</h2>
+		<ol>
+			<li>Git на локальной машине</li>
+			<li class="next">Git-клиент или консоль (Source Tree, cmder, gitbash, etc)</li>
+			<li class="next">Git-сервер/Git-хостинг (например, GitHub)</li>
+		</ol>
+	</section>
 	<section class="slide" id="picture">
 		<h2 style="color: #585A5E;">Стандартный рабочий процесс</h2>
 		<img src="pictures/areas.png" alt="" class="cover">
@@ -74,7 +82,15 @@
 				}
 		</style>
 	</section>
-
+	<section class="slide" id="picture">
+		<h2>Основные команды</h2>
+		<img src="pictures/console.jpg" height="701" width="1048" alt="" class="cover">
+		<style>
+			#picture h2 {
+				color:#FFF;
+				}
+		</style>
+	</section>
 	<section class="slide">
 		<h2>Shower key features</h2>
 		<ol>
