iss01 init & clone (+amend test) OB

--- a/index.html
+++ b/index.html
@@ -92,6 +92,20 @@
 		</style>
 	</section>
 	<section class="slide">
+		<h2>Git init</h2>
+		<p><code>git init</code> — версионный контроль в существующей директории</p>
+		<p><code>git init <i>dir_name</i></code> — создаем новую директорию</p>
+		<p><code>git init --bare <i>dir_name</i></code> — создаем репозиторий без рабочей директории</p>
+	</section>
+	<section class="slide">
+		<h2>Git clone</h2>
+		<p><code>git clone <i>repo</i></code> — копируем git-репозиторий</p>
+		<p><code>git clone <i>repo dir_name</i></code> — копируем в директорию</p>
+		<br>
+		<p class="note">пример:</p>
+		<p  style="font-size:0.7em"><code>git clone https://github.com/MammaSonnim/git-show.git gitshow</code></p>
+	</section>
+	<section class="slide">
 		<h2>Shower key features</h2>
 		<ol>
 			<li>Built on HTML, CSS and vanilla JavaScript</li>
