iss01 special symbols

--- a/index.html
+++ b/index.html
@@ -94,13 +94,21 @@
 	<section class="slide">
 		<h2>Git init</h2>
 		<p><code>git init</code> — версионный контроль в существующей директории</p>
-		<p><code>git init <i>dir_name</i></code> — создаем новую директорию</p>
-		<p><code>git init --bare <i>dir_name</i></code> — создаем репозиторий без рабочей директории</p>
+		<p><code>git init <i>&lt;dir&gt;</i></code> — создаем новую директорию</p>
+		<p><code>git init --bare <i>&lt;dir&gt;</i></code> — создаем репозиторий без рабочей директории</p>
 	</section>
 	<section class="slide">
 		<h2>Git clone</h2>
-		<p><code>git clone <i>repo</i></code> — копируем git-репозиторий</p>
-		<p><code>git clone <i>repo dir_name</i></code> — копируем в директорию</p>
+		<p><code>git clone <i>&lt;repo&gt;</i></code> — копируем git-репозиторий</p>
+		<p><code>git clone <i>&lt;repo dir&gt;</i></code> — копируем в директорию</p>
+		<br>
+		<p class="note">пример:</p>
+		<p  style="font-size:0.7em"><code>git clone https://github.com/MammaSonnim/git-show.git gitshow</code></p>
+	</section>
+	<section class="slide">
+		<h2>Git config</h2>
+		<p><code>git clone <i>&lt;repo&gt;</i></code> — копируем git-репозиторий</p>
+		<p><code>git clone <i>&lt;repo dir&gt;</i></code> — копируем в директорию</p>
 		<br>
 		<p class="note">пример:</p>
 		<p  style="font-size:0.7em"><code>git clone https://github.com/MammaSonnim/git-show.git gitshow</code></p>
