iss01 git config

--- a/index.html
+++ b/index.html
@@ -107,11 +107,13 @@
 	</section>
 	<section class="slide">
 		<h2>Git config</h2>
-		<p><code>git clone <i>&lt;repo&gt;</i></code> — копируем git-репозиторий</p>
-		<p><code>git clone <i>&lt;repo dir&gt;</i></code> — копируем в директорию</p>
+		<p><code>--system</code> / <code>--global</code> / без ключа</p>
+		<p><code>git config --list</code> — все настройки файлов конфигурации</p>
 		<br>
-		<p class="note">пример:</p>
-		<p  style="font-size:0.7em"><code>git clone https://github.com/MammaSonnim/git-show.git gitshow</code></p>
+		<p style="font-size:0.7em"><code>git config --global user.name <i>&lt;name&gt;</i></code></p>
+		<p style="font-size:0.7em"><code>git config --global user.email <i>&lt;email&gt;</i></code></p>
+		<p style="font-size:0.7em"><code>git config --system core.editor <i>&lt;editor&gt;</i></code></p>
+
 	</section>
 	<section class="slide">
 		<h2>Shower key features</h2>
