--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<section class="slide" id="cover">
 		<h2>Введение в GIT</h2>
 		<p><a href="https://github.com/MammaSonnim">Яна Крикливая</a></p>
-		<img src="pictures/cover.jpg" alt="" class="cover">
+		<img src="pictures/cover.jpg" height="640" width="1024" alt="" class="cover">
 		<!--
 			To apply styles to the certain slides
 			set slide ID to get needed elements
@@ -75,16 +75,11 @@
 	</section>
 	<section class="slide" id="picture">
 		<h2 style="color: #585A5E;">Стандартный рабочий процесс</h2>
-		<img src="pictures/areas.png" alt="" class="cover">
-		<style>
-			#picture h2 {
-				color:#FFF;
-				}
-		</style>
+		<img src="pictures/areas.png" height="640" width="1024" alt="" class="cover">
 	</section>
 	<section class="slide" id="picture">
 		<h2>Основные команды</h2>
-		<img src="pictures/console.jpg" height="701" width="1048" alt="" class="cover">
+		<img src="pictures/console.jpg" height="640" width="1024" alt="" class="cover">
 		<style>
 			#picture h2 {
 				color:#FFF;
@@ -113,7 +108,10 @@
 		<p style="font-size:0.7em"><code>git config --global user.name <i>&lt;name&gt;</i></code></p>
 		<p style="font-size:0.7em"><code>git config --global user.email <i>&lt;email&gt;</i></code></p>
 		<p style="font-size:0.7em"><code>git config --system core.editor <i>&lt;editor&gt;</i></code></p>
-
+	</section>
+	<section class="slide">
+		<h2>Жизненный цикл состояний файлов</h2>
+		<img src="pictures/lifecycle.png" height="340" width="824" alt="" class="place" style="margin-top: 50px;">
 	</section>
 	<section class="slide">
 		<h2>Shower key features</h2>
