iss01 add, ci, st, log, diff

--- a/index.html
+++ b/index.html
@@ -114,6 +114,14 @@
 		<img src="pictures/lifecycle.png" height="340" width="824" alt="" class="place" style="margin-top: 50px;">
 	</section>
 	<section class="slide">
+		<h2>Запись и просмотр изменений</h2>
+		<p><code>git add <i>&lt;file&gt;/&lt;dir&gt;</i></code> — добавление файлов в индекс</p>
+		<p><code>git commit</code> — фиксация изменений</p>
+		<p><code>git status</code> — определение состояния файлов</p>
+		<p><code>git diff</code> / + <code> --cached</code> — просмотр изменений до индекса / коммита</p>
+		<p><code>git log</code> — просмотр истории по коммитам</p>
+	</section>
+	<section class="slide">
 		<h2>Shower key features</h2>
 		<ol>
 			<li>Built on HTML, CSS and vanilla JavaScript</li>
