--- a/index.html
+++ b/index.html
@@ -122,6 +122,11 @@
 		<p><code>git log</code> — просмотр истории по коммитам</p>
 	</section>
 	<section class="slide">
+		<h2>template</h2>
+		<p><code>git</code> — </p>
+		<p><code>git</code> — </p>
+	</section>
+	<section class="slide">
 		<h2>Shower key features</h2>
 		<ol>
 			<li>Built on HTML, CSS and vanilla JavaScript</li>
