iss01 undoing changes

--- a/index.html
+++ b/index.html
@@ -122,6 +122,13 @@
 		<p><code>git log</code> — просмотр истории по коммитам</p>
 	</section>
 	<section class="slide">
+		<h2>Отмена изменений</h2>
+		<p><code>git checkout</code> — загрузка других версий проекта</p>
+		<p><code>git revert</code> — </p>
+		<p><code>git reset</code> — </p>
+		<p><code>git clean</code> — </p>
+	</section>
+	<section class="slide">
 		<h2>template</h2>
 		<p><code>git</code> — </p>
 		<p><code>git</code> — </p>
