iss01 rewriting history

--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@
 		<p><code>git clean</code> — </p>
 	</section>
 	<section class="slide">
+		<h2>Переписывание истории</h2>
+		<p><code>git commit --amend</code> — </p>
+		<p><code>git rebase</code> — </p>
+		<p><code>git rebase -i</code> — </p>
+		<p><code>git reflog</code> — </p>
+	</section>
+
+	<section class="slide">
 		<h2>template</h2>
 		<p><code>git</code> — </p>
 		<p><code>git</code> — </p>
