--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
 	<section class="slide" id="source">
 		<h2>Полезные ссылки (рус.)</h2>
 		<ul>
-			<li><a href="https://www.youtube.com/watch?t=686&v=Oyj5yVVrT4Q">скринкаст «Основы работы с Git»</a> <i>(Сергей Попов)</i></li>
+			<li><a href="https://www.youtube.com/watch?t=686&v=Oyj5yVVrT4Q">«Основы работы с Git»</a> <i>(скринкаст от Сергея Попова)</i></li>
 			<li><a href="https://git-scm.com/book/ru/v1">учебник "Pro Git" <i>(версия 1)</i>,</a> <a href="https://git-scm.com/book/ru/v2/"><i>(версия 2)</i></a></li>
-			<li><a href="https://try.github.io/levels/1/challenges/1">интерактивный курс "tryGit"</a> <i>(15-минутный)</i></li>
-			<li><a href="http://pcottle.github.io/learnGitBranching/">обучающая игра "Learn Git Branching"</a> <i>(поможет разобраться с ветками)</i></li>
-			<li><a href="http://githowto.com/ru">интерактивный тур "Git How To"</a></li>
+			<li><a href="https://try.github.io/levels/1/challenges/1">"tryGit"</a> <i>(15-минутный интерактивный курс)</i></li>
+			<li><a href="http://pcottle.github.io/learnGitBranching/">"Learn Git Branching"</a> <i>(обучающая игра, которая поможет разобраться с ветками)</i></li>
+			<li><a href="http://githowto.com/ru">"Git How To"</a><i>(интерактивный тур)</i></li>
 			<li><a href="http://rogerdudler.github.io/git-guide/index.ru.html">"git — the simple guide"</a></li>
 			<li><a href="http://habrahabr.ru/company/mailru/blog/267595/ ">статья «19 советов по повседневной работе с Git»</a></li>
 			<li><a href="http://habrahabr.ru/post/106912/">статья «Удачная модель ветвления для Git»</a></li>
@@ -200,6 +200,7 @@
 			<li><a href="https://pages.github.com">GitHub Pages</a> <i>(инструкции по хостингу проектов на GitHub)</i></li>
 			<li><a href="https://github.com/git/git/blob/master/Documentation/SubmittingPatches">Submitting Patches</a> <i>(руководство по созданию коммитов)</i></li>
 			<li><a href="https://git.wiki.kernel.org/index.php/Main_Page">Git-wiki</a></li>
+			<li><a href="https://www.codecademy.com/learn/learn-git">"Learn Git" on codeacademy</a><i>(интерактивный курс)</i></li>
 		</ul>
 		<style>
 			#source2 li {
@@ -217,7 +218,7 @@
 		</figure>
 	</section>
 	<p class="badge">
-		<a href="https://github.com/shower/shower">Fork Shower on GitHub</a>
+		<a href="https://github.com/MammaSonnim/git-show">Fork me on GitHub</a>
 	</p>
 	<!--
 		To hide progress bar from entire presentation
@@ -225,7 +226,5 @@
 		-->
 	<div class="progress"></div>
 	<script src="shower/shower.min.js"></script>
-	<!-- Copyright © 2015 Yours Truly, Famous Inc. -->
-	<!-- Photos by John Carey, fiftyfootshadows.net -->
 </body>
 </html>
