--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
 			<li><a href="https://git-scm.com/book/ru/v1">учебник "Pro Git" <i>(версия 1)</i>,</a> <a href="https://git-scm.com/book/ru/v2/"><i>(версия 2)</i></a></li>
 			<li><a href="https://try.github.io/levels/1/challenges/1">"tryGit"</a> <i>(15-минутный интерактивный курс)</i></li>
 			<li><a href="http://pcottle.github.io/learnGitBranching/">"Learn Git Branching"</a> <i>(обучающая игра, которая поможет разобраться с ветками)</i></li>
-			<li><a href="http://githowto.com/ru">"Git How To"</a><i>(интерактивный тур)</i></li>
+			<li><a href="http://githowto.com/ru">"Git How To"</a> <i>(интерактивный тур)</i></li>
 			<li><a href="http://rogerdudler.github.io/git-guide/index.ru.html">"git — the simple guide"</a></li>
 			<li><a href="http://habrahabr.ru/company/mailru/blog/267595/ ">статья «19 советов по повседневной работе с Git»</a></li>
 			<li><a href="http://habrahabr.ru/post/106912/">статья «Удачная модель ветвления для Git»</a></li>
-			<li><a href="http://habrahabr.ru/post/202696/">статья «Cпособы исключения файлов в Git»</a> (помимо .gitignore)</li>
+			<li><a href="http://habrahabr.ru/post/202696/">статья «Cпособы исключения файлов в Git»</a> <i>(помимо .gitignore)</i></li>
 			<li><a href="http://habrahabr.ru/post/174467/">статья «Ежедневная работа с Git»</a></li>
 		</ul>
 		<style>
@@ -200,7 +200,7 @@
 			<li><a href="https://pages.github.com">GitHub Pages</a> <i>(инструкции по хостингу проектов на GitHub)</i></li>
 			<li><a href="https://github.com/git/git/blob/master/Documentation/SubmittingPatches">Submitting Patches</a> <i>(руководство по созданию коммитов)</i></li>
 			<li><a href="https://git.wiki.kernel.org/index.php/Main_Page">Git-wiki</a></li>
-			<li><a href="https://www.codecademy.com/learn/learn-git">"Learn Git" on codeacademy</a><i>(интерактивный курс)</i></li>
+			<li><a href="https://www.codecademy.com/learn/learn-git">"Learn Git" on codeacademy</a> <i>(интерактивный курс)</i></li>
 		</ul>
 		<style>
 			#source2 li {
